<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movieDetail.MovieDetailFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">
            <LinearLayout
                android:id="@+id/contentHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_header">

                <ImageView
                    android:id="@+id/detailPoster"
                    android:layout_width="160dp"
                    android:layout_height="240dp"
                    android:layout_marginStart="0dp"
                    android:contentDescription="@string/poster"
                    android:src="@drawable/no_internet" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:layout_marginBottom="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:src="@android:drawable/ic_menu_my_calendar"
                            android:contentDescription="@string/calendar" />

                        <TextView
                            android:id="@+id/detailDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/layout_average">

                        <TextView
                            android:id="@+id/detailAverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:textColor="#fff"/>

                    </RelativeLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/average"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detailCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:text="@string/average"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_votes"/>

                </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/detailOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textSize="18sp"
                android:maxLength="320"
                android:textAlignment="textStart"
                android:layout_below="@+id/contentHeader" />

            <ImageView
                android:id="@+id/detailBackdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backdrop"
                android:layout_marginStart="0dp"
                android:layout_below="@id/detailOverview"
                android:src="@drawable/no_internet"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>